<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDataDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvStationIdLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:labelFor="@id/spStationIdValue"
            android:text="@string/station_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvUserIdLable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spStationIdValue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvStationIdLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStationIdLable"
            app:layout_constraintTop_toTopOf="@+id/tvStationIdLable" />

        <TextView
            android:id="@+id/tvUserIdLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:labelFor="@id/tbUserIdValue"
            android:text="@string/user_id_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvJobIdLable"
            app:layout_constraintEnd_toEndOf="@+id/tvStationIdLable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStationIdLable" />

        <EditText
            android:id="@+id/tbUserIdValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/user_id_placeholder_text"
            android:inputType="number"
            android:nextFocusDown="@id/tbJobIdValue"
            android:nextFocusForward="@id/tbJobIdValue"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvUserIdLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvUserIdLable" />

        <TextView
            android:id="@+id/tvJobIdLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:labelFor="@id/tbJobIdValue"
            android:text="@string/job_id_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvStatusLable"
            app:layout_constraintEnd_toEndOf="@+id/tvUserIdLable"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserIdLable" />

        <EditText
            android:id="@+id/tbJobIdValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/job_id_placeholder_text"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvJobIdLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvJobIdLable" />

        <TextView
            android:id="@+id/tvStatusLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:labelFor="@id/spStationIdValue"
            android:text="@string/job_status_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvStoppageDescriptionLabel"
            app:layout_constraintEnd_toEndOf="@+id/tvJobIdLable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJobIdLable" />

        <Spinner
            android:id="@+id/spJobStatus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/list_work_status"
            app:layout_constraintBottom_toBottomOf="@+id/tvStatusLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStatusLable"
            app:layout_constraintTop_toTopOf="@+id/tvStatusLable" />

        <TextView
            android:id="@+id/tvStoppageDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            android:labelFor="@id/etStoppageDescription"
            android:text="@string/stoppage_description_box_title"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tvStatusLable"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusLable" />


        <EditText
            android:id="@+id/etStoppageDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/stoppage_description_box_placeholder"
            android:inputType="text"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@id/tvStoppageDescriptionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvJobIdLable" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clUserStatusContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="visible"
            android:background="@drawable/user_status_border"
            app:layout_constraintTop_toBottomOf="@+id/spJobStatus"
            >

            <TextView
                android:id="@+id/tvUserStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserStatusJobId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tvUserStatus" />

            <TextView
                android:id="@+id/tvUserStatusProductId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tvUserStatusJobId" />

            <TextView
                android:id="@+id/tvUserStatusStationId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tvUserStatusProductId" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        />

        <LinearLayout
            android:id="@+id/buttonsLowerSet"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:paddingVertical="20dp"
                android:elevation="10dp"
                android:text="@android:string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnSend" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingVertical="20dp"
                android:layout_weight="2"
                android:backgroundTint="@color/submit_button_color_state_list"
                android:elevation="10dp"
                android:focusableInTouchMode="false"
                android:text="@string/send"
                android:textColor="@color/colorSubmit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
